--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8096
+spring.datasource.url=jdbc:mysql://192.168.1.199:3307/heromars
+spring.datasource.username=hmadmin
+spring.datasource.password=HMAdmin12
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
